# lightning

./: .msggen.json
cln-grpc/: Cargo.toml
cln-grpc/proto/: node.proto
cln-grpc/src/: serde_convert.rs  server.rs
cln-rpc/: Cargo.toml
cln-rpc/src/: model.rs
contrib/msggen/msggen/: model.py
contrib/msggen/msggen/utils/: utils.py
contrib/pyln-testing/pyln/testing/: grpc2py.py
plugins/grpc-plugin/: Cargo.toml
plugins/grpc-plugin/src/: main.rs
