[package]
name = "cln-grpc"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
cln-rpc = { path="../cln-rpc/" }
futures = "0.3.25"
futures-core = "0.3.25"
serde_json = "1.0.72"
tokio = "1"
tokio-stream = { version = "0.1.11", features = [ "sync" ] }
tonic = { version = "^0.5", features = ["tls", "transport"] }
prost = "0.8"
hex = "0.4.3"
bitcoin_hashes = { version = "0.10.0", features = [ "serde" ] }

[dev-dependencies]
serde_json = "1.0.72"

[build-dependencies]
tonic-build = "^0.5"
